updated commit to blog

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="detail">
       <time>Sun, Apr 30, 2017</time>
       <h2 class="title">Welcome</h2>
-      <div class="summary">Another year, another try at blogging. This time I have stumbled upon Hugo - a static site generator. This comes as a recommended tool by Shekhar Gulati in his 52 Technologies in 2016 blog series.</div>
+      <div class="summary">Another year, another try at blogging. This time I have stumbled upon Hugo - a static site generator. This comes as a recommended tool by Shekhar Gulati from his 52 Technologies in 2016 blog series.</div>
     </div>
   </a>
 </article>
@@ -80,7 +80,7 @@
     <div class="detail">
       <time>Sun, Apr 30, 2017</time>
       <h2 class="title">Welcome</h2>
-      <div class="summary">Another year, another try at blogging. This time I have stumbled upon Hugo - a static site generator. This comes as a recommended tool by Shekhar Gulati in his 52 Technologies in 2016 blog series.</div>
+      <div class="summary">Another year, another try at blogging. This time I have stumbled upon Hugo - a static site generator. This comes as a recommended tool by Shekhar Gulati from his 52 Technologies in 2016 blog series.</div>
     </div>
   </a>
 </article>
